# TTS_experiments

layers/: common_layers.py  tacotron2.py
models/: tacotron2.py
native_inference/: CMakeLists.txt  main.cpp
server/: synthesizer.py
utils/: audio.py  generic_utils.py  inv_mel_spectrogram.py  stft.py  synthesis.py
